# airllm-rs

./: Cargo.toml  Makefile  README.md  pyproject.toml
python/airllm_rs/: __init__.py
src/: error.rs  lib.rs  main.rs  python.rs  tokenizer.rs
src/inference/: engine.rs  generation.rs  mod.rs
src/layer/: cache.rs  loader.rs  mod.rs
src/model/: config.rs  mod.rs
src/tensor/: dtype.rs  mod.rs  ops.rs  view.rs
